--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -1,1 +1,137 @@
+@import 'node_modules/ember-frost-css-core/scss/frost-core';
 @import 'node_modules/ember-frost-theme/scss/frost-theme';
+
+$body-top: 52px;
+
+.tooltip-frost-popover .frost-button {
+  width: 100%;
+}
+
+.frost-app-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9000;
+
+  .frost-button {
+
+    .text {
+      color: $frost-color-grey-5;
+    }
+
+    .icon-text {
+      min-width: auto;
+    }
+  }
+
+  .frost-icon {
+    height: 35px;
+    width: 35px;
+    transition: transform .2s;
+  }
+
+  .hoverable-action:hover {
+    color: $frost-color-white;
+
+    .frost-icon {
+      transform: scale(1.1);
+    }
+
+    .text {
+      color: $frost-color-white;
+    }
+  }
+}
+
+.frost-menu-bar {
+  position: relative;
+  height: 50px;
+  display: flex;
+  background-color: #33424F;
+  z-index: 1;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+
+  .brand {
+    padding: 0;
+    border-right: solid 1px #666;
+
+    .frost-icon {
+      margin: 0px 30px;
+      height: 25px;
+      width: 125px;
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  .navigation {
+    cursor: pointer;
+    padding: 0px 10px;
+
+    &.menu {
+      border-right: solid 1px #666;
+      padding: 0px 20px;
+    }
+  }
+
+  .menu-right {
+    display: flex;
+    margin-left: auto;
+  }
+}
+
+.frost-app-menu {
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  background-color: #3E474B;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+
+  .menu-category {
+    min-width: 200px;
+    list-style-type: none;
+    margin: 0;
+    padding: 20px;
+    border-right: 1px solid #666;
+    flex-grow: 1;
+
+    &:last-child {
+      border-right: none;
+    }
+
+    h1 {
+      margin: 0px 0px 20px 0px;
+      color: $frost-color-grey-6;
+      font-weight: normal;
+      font-size: 24px;
+    }
+
+    li {
+      margin: 15px 0;
+    }
+
+    &:hover {
+      background-color: #33424F;
+    }
+  }
+}
+
+.menu-item-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  >div {
+    padding: 2px;
+  }
+
+  .title {
+    font-size: 16px;
+  }
+
+  .description {
+    font-size: 14px;
+  }
+}
